# De-Presuppose

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: index.html
docs/static/css/: index.css
docs/static/js/: index.js
scripts/: grid_search_reasoner.py
src/: eval_wice_ques.py  reasoner.py  utils.py
src/prompts/qa/: decomposition.py  depresupposition.py  utils.py
src/prompts/utils/: question_to_subclaim_matching.py
src/prompts/verifier/: minicheck.py  sg1.py  sg2.py
