[project]
name = "depresuupose-for-sem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "joblib>=1.5.2",
    "jsonlines>=4.0.0",
    "loguru>=0.7.3",
    "numpy>=2.3.4",
    "openai>=2.6.1",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "tenacity>=9.1.2",
]
